[gd_scene load_steps=17 format=4 uid="uid://dpi8tjx8e41rm"]

[ext_resource type="Script" path="res://door.gd" id="1_bq7ha"]
[ext_resource type="AudioStream" uid="uid://byofku2rctst8" path="res://audio/door-open.wav" id="2_gaatp"]
[ext_resource type="AudioStream" uid="uid://dvrb6eo7y786g" path="res://audio/locked.wav" id="3_d0ues"]

[sub_resource type="BoxShape3D" id="BoxShape3D_nxle6"]
size = Vector3(1.08795, 22.2146, 10.925)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_75ogd"]
resource_name = "Material.014"
cull_mode = 2
albedo_color = Color(0.575496, 0.626945, 0.759352, 1)
roughness = 0.5

[sub_resource type="ArrayMesh" id="ArrayMesh_xi5qm"]
_surfaces = [{
"aabb": AABB(0.00739288, -1.96416, -2.72702, 2, 3.67716, 2.74599),
"format": 34896613377,
"index_count": 36,
"index_data": PackedByteArray("AAADAAEAAAACAAMAAgAHAAMAAgAGAAcABgAFAAcABgAEAAUABAABAAUABAAAAAEAAgAEAAYAAgAAAAQABwABAAMABwAFAAEA"),
"name": "Material.014",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 8,
"vertex_data": PackedByteArray("AAAAAP//AAAAAP////8AAAAAAAAAAAAAAAD//wAAAAD//wAA//8AAP///////wAA//8AAAAAAAD/////AAAAAA==")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_g0463"]
resource_name = "a traveler in time_Cube_012"
_surfaces = [{
"aabb": AABB(0.00739288, -1.96416, -2.72702, 2, 3.67716, 2.74599),
"attribute_data": PackedByteArray("/1////8f/z//XwAA/5////+fAAD/3/8//1//v/8f/3//X/+//5//v/+f/7//3/9//1//P/9f/z//X/8//5//P/+f/z//n/8//1//f/9f/3//X/9//5//f/+f/3//n/9/"),
"format": 34896613399,
"index_count": 36,
"index_data": PackedByteArray("AAAJAAMAAAAGAAkACAAVAAoACAATABUAFAARABcAFAAOABEADQAEAA8ADQACAAQABwAMABIABwABAAwAFgAFAAsAFgAQAAUA"),
"material": SubResource("StandardMaterial3D_75ogd"),
"name": "Material.014",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 24,
"vertex_data": PackedByteArray("AAAAAP//VNUAAAAA////vwAAAAD///+/AAD/////VNUAAP//////vwAA////////AAAAAAAAVNUAAAAAAAD/vwAAAAAAAP//AAD//wAAVNUAAP//AAD//wAA//8AAP////8AAP///7///wAA////v///AAD//1TV/////////7///////////////////1TV//8AAAAA/7///wAAAAD/////AAAAAFTV/////wAA////////AAD///////8AAFTVVNVU1QAA/3//////VNVU1f//////f/+/VNVU1QAA/3//v/+/VNVU1f+//7//f/+/AAD/f/////+qKqoq//////9//7+qKqoqAAD/f/+//7+qKqoq/7//v/9//7+qKqoq")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_xi5qm")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xx56s"]
resource_name = "Material"
cull_mode = 2
albedo_color = Color(0.906332, 0.678448, 0.178198, 1)
roughness = 0.5

[sub_resource type="ArrayMesh" id="ArrayMesh_ha4k3"]
_surfaces = [{
"aabb": AABB(-1, -1, -1, 2, 2, 2),
"format": 34896613377,
"index_count": 36,
"index_data": PackedByteArray("AAADAAEAAAACAAMAAgAHAAMAAgAGAAcABgAFAAcABgAEAAUABAABAAUABAAAAAEAAgAEAAYAAgAAAAQABwABAAMABwAFAAEA"),
"name": "Material",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 8,
"vertex_data": PackedByteArray("AAAAAP//AAAAAP////8AAAAAAAAAAAAAAAD//wAAAAD//wAA//8AAP///////wAA//8AAAAAAAD/////AAAAAA==")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_pjud2"]
resource_name = "a traveler in time_Cube_014"
_surfaces = [{
"aabb": AABB(-1, -1, -1, 2, 2, 2),
"attribute_data": PackedByteArray("/1////8f/z//XwAA/5////+fAAD/3/8//1//v/8f/3//X/+//5//v/+f/7//3/9//1//P/9f/z//X/8//5//P/+f/z//n/8//1//f/9f/3//X/9//5//f/+f/3//n/9/"),
"format": 34896613399,
"index_count": 36,
"index_data": PackedByteArray("AAAJAAMAAAAGAAkACAAVAAoACAATABUAFAARABcAFAAOABEADQAEAA8ADQACAAQABwAMABIABwABAAwAFgAFAAsAFgAQAAUA"),
"material": SubResource("StandardMaterial3D_xx56s"),
"name": "Material",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 24,
"vertex_data": PackedByteArray("AAAAAP//VNUAAAAA////vwAAAAD///+/AAD/////VNUAAP//////vwAA////////AAAAAAAAVNUAAAAAAAD/vwAAAAAAAP//AAD//wAAVNUAAP//AAD//wAA//8AAP////8AAP///7///wAA////v///AAD//1TV/////////7///////////////////1TV//8AAAAA/7///wAAAAD/////AAAAAFTV/////wAA////////AAD///////8AAFTVVNVU1QAA/3//////VNVU1f//////f/+/VNVU1QAA/3//v/+/VNVU1f+//7//f/+/AAD/f/////+qKqoq//////9//7+qKqoqAAD/f/+//7+qKqoq/7//v/9//7+qKqoq")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_ha4k3")

[sub_resource type="ArrayMesh" id="ArrayMesh_nndfd"]
_surfaces = [{
"aabb": AABB(-1, -1, -1, 2, 2, 2),
"format": 34896613377,
"index_count": 36,
"index_data": PackedByteArray("AAADAAEAAAACAAMAAgAHAAMAAgAGAAcABgAFAAcABgAEAAUABAABAAUABAAAAAEAAgAEAAYAAgAAAAQABwABAAMABwAFAAEA"),
"name": "Material",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 8,
"vertex_data": PackedByteArray("AAAAAP//AAAAAP////8AAAAAAAAAAAAAAAD//wAAAAD//wAA//8AAP///////wAA//8AAAAAAAD/////AAAAAA==")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_m615n"]
resource_name = "a traveler in time_Cube_013"
_surfaces = [{
"aabb": AABB(-1, -1, -1, 2, 2, 2),
"attribute_data": PackedByteArray("/1////8f/z//XwAA/5////+fAAD/3/8//1//v/8f/3//X/+//5//v/+f/7//3/9//1//P/9f/z//X/8//5//P/+f/z//n/8//1//f/9f/3//X/9//5//f/+f/3//n/9/"),
"format": 34896613399,
"index_count": 36,
"index_data": PackedByteArray("AAAJAAMAAAAGAAkACAAVAAoACAATABUAFAARABcAFAAOABEADQAEAA8ADQACAAQABwAMABIABwABAAwAFgAFAAsAFgAQAAUA"),
"material": SubResource("StandardMaterial3D_xx56s"),
"name": "Material",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 24,
"vertex_data": PackedByteArray("AAAAAP//VNUAAAAA////vwAAAAD///+/AAD/////VNUAAP//////vwAA////////AAAAAAAAVNUAAAAAAAD/vwAAAAAAAP//AAD//wAAVNUAAP//AAD//wAA//8AAP////8AAP///7///wAA////v///AAD//1TV/////////7///////////////////1TV//8AAAAA/7///wAAAAD/////AAAAAFTV/////wAA////////AAD///////8AAFTVVNVU1QAA/3//////VNVU1f//////f/+/VNVU1QAA/3//v/+/VNVU1f+//7//f/+/AAD/f/////+qKqoq//////9//7+qKqoqAAD/f/+//7+qKqoq/7//v/9//7+qKqoq")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_nndfd")

[sub_resource type="Animation" id="Animation_3mkvo"]
length = 0.001
tracks/0/type = "rotation_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatableBody3D")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_sybxd"]
resource_name = "open_door_animation"
tracks/0/type = "rotation_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatableBody3D")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 0, 0, 1, 1, 1, 0, 0.707, 0, 0.707)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bo1kj"]
_data = {
"RESET": SubResource("Animation_3mkvo"),
"open_door_animation": SubResource("Animation_sybxd")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_iwo4d"]
size = Vector3(26.3725, 22.9839, 20.1105)

[node name="door" type="Node3D"]
script = ExtResource("1_bq7ha")

[node name="AnimatableBody3D" type="AnimatableBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="AnimatableBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0439759, -0.483719, -5.42782)
shape = SubResource("BoxShape3D_nxle6")

[node name="door" type="MeshInstance3D" parent="AnimatableBody3D"]
transform = Transform3D(0.363697, 0, 0, 0, 6.06632, 0, 0, 0, 3.97655, 0, 0, 0)
mesh = SubResource("ArrayMesh_g0463")
skeleton = NodePath("")

[node name="doorknob" type="MeshInstance3D" parent="AnimatableBody3D/door"]
transform = Transform3D(0.446355, 0, 0, 0, 0.164845, 0, 0, 0, 0.117248, 0.00695038, 0.076313, -2.57645)
mesh = SubResource("ArrayMesh_pjud2")
skeleton = NodePath("")

[node name="doorknob2" type="MeshInstance3D" parent="AnimatableBody3D/door/doorknob"]
transform = Transform3D(-0.533267, 0, 0, 0, 0.180783, 0, 0, 0, 1.78961, -1.52338, 0, 1.28011)
mesh = SubResource("ArrayMesh_m615n")
skeleton = NodePath("")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bo1kj")
}

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.382584, -0.994965, -4.1911)
shape = SubResource("BoxShape3D_iwo4d")

[node name="audio" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(0.968086, -0.230773, -0.0977365, 0.223794, 0.971563, -0.0773434, 0.112806, 0.0530023, 0.992202, 0, 0, 0)
stream = ExtResource("2_gaatp")

[node name="audio2" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(0.968086, -0.230773, -0.0977365, 0.223794, 0.971563, -0.0773434, 0.112806, 0.0530023, 0.992202, 0, 0, 0)
stream = ExtResource("3_d0ues")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
